Teacher preview with correction

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h2>Hope</h2>
+    <p>Load local file</p>
+    <input type="file" id="localFile" onchange="loadAudioFile(this)"/>
     <audio controls id="myaudio">
-        <!-- <source src="sample.wav" type="audio/mpeg"> -->
-        <source src="http://localhost:3001/audio/sample.wav" type="audio/mpeg">
+        <source id="audioSource" src="http://localhost:3001/audio/haya1.wav" type="audio/mpeg">
       Your browser does not support the audio element.
-      </audio>
+    </audio>
       <div>
           <h3>Playback</h3>
       </div>
@@ -31,12 +32,28 @@
       <hr>
       <div>
         <h3>Teacher mode</h3>
-        <audio id="tracherAudio"></audio>
+        <audio controls id="tracherAudio">
+            <source id="teacherAudioSource" src="http://localhost:3001/audio/haya1.wav" type="audio/mpeg">>
+        </audio>
         <input type="file" id="filepick" onchange="loadFile(this)">
+        <br/>
+        <br/>
+        <button onclick="startTeacherPlay()">Start Teacher Play</button>
+        <button onclick="pauseTeacherPlay()">Pause Teacher Play</button>
+        <button onclick="resetTeacherSampling()">Reset Teacher Sampling</button>
+        </br>
+        </br>
         <button disabled id="samplePoints" onclick="samplePoints()">set points</button>
+        <button onclick="review()">Review</button>
+        <button onclick="nextReview()">Next Review</button>
+        <button onclick="finalize()">Finalize</button>
+        <button onclick="correctEnd('+')">Inc End</button>
+        <button onclick="correctEnd('-')">Dec End</button>
+        <br/>
         <label for="speed">Playback speed </label><input type="text" value="1" size="2" id="learnSpeed"/>
         <div class='sampleResult'>
-
+            <p>Total number of samples <span id="nosample"></span></p>
+            <p>Current review <span id="startR"></span> <span id="endR"></span></p>
         </div>
     </div>
     <script type="text/javascript" src="learnpoints.js"></script>
